test/regress/coverage-negative-cost.test
; Coverage test for textual_xacts.cc line 574-575
; Posting with a negative cost should produce an error

2024/01/01 Test
    Assets:Stocks     10 AAPL @ $-150.00
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Stocks     10 AAPL @ $-150.00
                              ^^^^^^^^
Error: A posting's cost may not be negative
end test
